--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development ts-node index.ts",
     "build": "rm -rf ./build && tsc",
-    "start": "node ./build/index.js",
+    "start": "node index.js",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration": "yarn typeorm migration:run -d ./packages/migrations/source.ts",
     "revert": "yarn typeorm migration:revert -d ./packages/migrations/source.ts"
